# pocketsphinx_flutter

./: .metadata  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
assets/: cmudict.dict  keywords.list  pocketsphinx-android-5prealpha-release.aar
assets/extracted_aar/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/pocketsphinx_ffi_wrapper_example/: MainActivity.kt
example/assets/: cmudict.dict  keywords.list
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
ios/: pocketsphinx_ffi_wrapper.podspec  pocketsphinx_flutter.podspec
ios/Classes/: pocketsphinx_ffi_wrapper.c  pocketsphinx_flutter.c
ios/PocketSphinx/: dummy.c
ios/PocketSphinx/PocketSphinx.xcframework/: Info.plist
lib/: pocketsphinx_ffi_wrapper.dart  pocketsphinx_ffi_wrapper_bindings_generated.dart  pocketsphinx_flutter.dart  pocketsphinx_flutter_bindings_generated.dart
macos/: pocketsphinx_ffi_wrapper.podspec  pocketsphinx_flutter.podspec
macos/Classes/: pocketsphinx_flutter.c
src/: CMakeLists.txt  pocketsphinx_ffi_wrapper.c  pocketsphinx_ffi_wrapper.h  pocketsphinx_flutter.c
(+1 files in other folders)
